[gd_scene load_steps=4 format=2]

[ext_resource path="res://Entities/CharacterBase.tscn" type="PackedScene" id=1]
[ext_resource path="res://Assets/Huntress/Huntress_Anims.tres" type="SpriteFrames" id=2]
[ext_resource path="res://Entities/Huntress.gd" type="Script" id=3]

[node name="Character" instance=ExtResource( 1 )]
script = ExtResource( 3 )
speed = 200.0

[node name="AnimatedSprite" parent="." index="1"]
position = Vector2( 1.33484, -4.41226 )
frames = ExtResource( 2 )

[node name="SpearSpawnPosRight" type="Position2D" parent="DamageArea2D" index="1"]
position = Vector2( 20, -20 )

[node name="SpearSpawnPosLeft" type="Position2D" parent="DamageArea2D" index="2"]
position = Vector2( 20, -20 )
[connection signal="animation_finished" from="AnimatedSprite" to="." method="_on_AnimatedSprite_animation_finished"]
